Bug 942929 - Use longtapup event to handle firing clicks when longtap not handled. r=kats